syntax = "proto3";

package users;

option java_package = "br.com.selat.grpc.users";
option java_multiple_files = true;

message User {
    string first_name = 1;
    string last_name = 2;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    string result = 1;
}

service UserService {
    rpc User(UserRequest) returns (UserResponse){};
}
